<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/celsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:ems="24"
        android:inputType="text"
        android:paddingTop="48dp"
        android:text="0"
        android:textSize="20sp" />

    <Button
        android:id="@+id/converter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert" />

    <TextView
        android:id="@+id/fahrenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

</LinearLayout>